fix(NIO): improve load method for String